[package]
name = "circle-checker2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {version = "0.13.1", features = ["yaml"]}
webbrowser = "0.7.1"
log = "0.4"
env_logger = "0.8"
futures = "0.3"
tokio = { version = "1", features = ["full"]}
egg-mode = "0.16"
#reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
bincode = "1.3"
